Fix YokimonLoaderTest List method call